--- a/pom.xml
+++ b/pom.xml
@@ -200,10 +200,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>io.github.wasabithumb</groupId>
-            <artifactId>jtoml</artifactId>
-            <version>1.1.0</version>
-            <scope>compile</scope>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.13.2</version>
         </dependency>
     </dependencies>
 </project>
