finish the rest of it lol (forgot to do it in steps)
* send player messages mc -> discord via webhooks
* add dependency discord-webhooks
* add config field "webhook_url" for each bridged channel
* add player joining & leaving messages (mc)

--- a/src/main/resources/dfproxyplugin.toml
+++ b/src/main/resources/dfproxyplugin.toml
@@ -15,3 +15,4 @@ token = ""
     [[discord_bot.channels]]
     channel_id = "example_id"
     mc_server_name = "server_name"
+    webhook_url = "real_webhook_url"
